--- a/google-chrome.desktop
+++ b/google-chrome.desktop
@@ -106,7 +106,7 @@ Comment[vi]=Truy cập Internet
 Comment[zh_CN]=访问互联网
 Comment[zh_HK]=連線到網際網路
 Comment[zh_TW]=連線到網際網路
-Exec=/usr/bin/google-chrome-stable %U
+Exec=/usr/bin/google-chrome-stable --ssl-version-min=tls1 %U
 Terminal=false
 Icon=google-chrome
 Type=Application
@@ -166,7 +166,7 @@ Name[uk]=Нове вікно
 Name[vi]=Cửa sổ Mới
 Name[zh_CN]=新建窗口
 Name[zh_TW]=開新視窗
-Exec=/usr/bin/google-chrome-stable
+Exec=/usr/bin/google-chrome-stable --ssl-version-min=tls1
 TargetEnvironment=Unity
 
 [NewIncognito Shortcut Group]
@@ -219,5 +219,5 @@ Name[uk]=Нове вікно в режимі анонімного перегля
 Name[vi]=Cửa sổ ẩn danh mới
 Name[zh_CN]=新建隐身窗口
 Name[zh_TW]=新增無痕式視窗
-Exec=/usr/bin/google-chrome-stable --incognito
+Exec=/usr/bin/google-chrome-stable --ssl-version-min=tls1 --incognito
 TargetEnvironment=Unity
